--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "goit-node-rest-api",
   "type": "module",
   "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.5"
   },
